More updates in swagger
